<resources>
    <string name="app_name">Udarnik</string>
    <string name="btnStart">Начать</string>
    <string name="btnSettings">Настройки</string>
    <string name="btnTheory">Теория</string>
    <string name="textIntro">Добро пожаловать в Ударник!</string>
    <string name="textIntro2">Тренируйся и прокачивай свои знания</string>
    <string name="btnBack">Назад</string>

    <string name="scoreVision">Правильно:</string>
    <string name="scoreResetBtn">Сброс счёта</string>

    <string name="switchVibration">Вибрация</string>
    <string name="switchSounds">Звуки</string>

    <string name="hintSearch">Введите слово для проверки ударения...</string>

    <string name="btnNoun">Существительные</string>
    <string name="btnAdjective">Прилагательные</string>
    <string name="btnVerb">Глаголы</string>
    <string name="btnParticiple">Причастия</string>
    <string name="btnAdvParticiple">Деепричастия</string>
    <string name="btnAdverb">Наречия</string>

    <string name="titleNoun">Правила постановки ударений в именах существительных.</string>
    <string name="titleAdjective">Правила постановки ударений в именах прилагательных.</string>
    <string name="titleVerb">Правила постановки ударений в глаголах.</string>
    <string name="titleParticiple">Правила постановки ударений в причастиях.</string>
    <string name="titleAdvParticiple">Правила постановки ударений в деепричастиях.</string>
    <string name="titleAdverb">Правила постановки ударений в наречиях.</string>

    <string name="aboutNoun">1. Слова иноязычного происхождения, как правило, в русском языке сохраняют место ударения, какое они имели в языке-источнике. В английском языке ударения чаще всего имеют ударения на первом слоге, а во французском – на последнем.\nПоэтому английские заимствования звучат так:\nгЕнезис, мАркетинг, мЕнеджемент, пОртер;\nа французские так:\nгравЁр, диспансЕр, жалюзИ, каучУк, партЕр, пюпИтр, шассИ.\n\n2. В словах, обозначающих меры длины и оканчивающиеся на -метр, ударение падает на последний слог:\nкиломЕтр, сантимЕтр, миллимЕтр, децимЕтр.\n\n3. В сложных словах со второй частью -провод при общем значении «приспособление для транспортировки какого-либо вещества или энергии» ударение падает на корень -вод-:\nбензопровОд, водопровОд, мусоропровОд, светопровОд.\nНО: электропрОвод, электропрИвод.\n\n4. В словах, оканчивающихся на -лог, ударение падает, как правило, на последний слог:\nдиалОг, каталОг, монолОг, некролОг.\n\n5. В отглагольных существительных сохраняется место ударения, что в исходном глаголе, от которого они образованы:\n(веру) исповЕдать – вероисповЕдание\nобеспЕчить – обеспЕчение.\n\n6. В некоторых существительных ударение является неподвижным и остаётся на корне во всех падежах:\nаэропОрт – аэропОрты\nбАнт – бАнты – с бАнтами\nбухгАлтер – бухгАлтеров\nИкс – с Иксом – Иксы – Иксов\nкрАн – крАны\nлЕктор – лЕкторы – лЕкторов\nтОрт – с тОртом – тОрты – тОртами\nшАрф – шАрфа – шАрфы – шАрфов.\n\n7. В существительном бАловень ударение падает на корень. Во всех словах, образованных от этого слова, ударение на -БАЛ- НЕ падает:\nбалОванный, баловАть, балУю, балУясь, избалОванный, набаловАть.</string>
    <string name="aboutAdjective">1. В некоторых прилагательных ударение такое же, как и в исходных существительных, от которых они образованы:\nслИва – слИвовый\nкУхня – кУхонный\nщавЕль – щавЕлевый.\n\n2. Ударный слог полной формы некоторых прилагательных остаётся ударным и в краткой форме:\nкрасИвый – красИв – красИва – красИво – красИвы\nнемЫслимый – немЫслим – немЫслима – немЫслимо – немЫслимы.\n\n3. В некоторых частотных прилагательных с подвижным ударением оно падает на корень в полной форме – в единственном и множественном числе; а также в краткой – в мужском и среднем роде. В краткой форме женского рода ударение переходит на окончание:\nпрАвый – прАв – прАво – прАвы – правА\nстрОйный – стрОен – стрОйно – стрОйны – стройнА.\n\n4. Если ударение в краткой форме женского рода падает на окончание, то в сравнительной форме оно будет на суффиксе -Е- или-ЕЕ-:\nбольнА – больнЕе, сильнА – сильнЕе, стройнА – стройнЕе.\n\nЕсли же ударение в женском роде стоит на основе, то в сравнительной степени оно там и сохраняется:\nкрасИва – красИвее, печАльна – печАльнее.</string>
    <string name="aboutVerb">1. Ударение в глаголах прошедшего времени обычно падает на тот же слог, что и инфинитиве:\nгулЯть – гулЯл, гулЯла\nпрЯтать – прЯтал, прЯтала.\n\n2. В другой группе глаголов ударение во всех формах неподвижно, а в женском роде прошедшего времени переходит на окончание:\nбрАть – брАл, бралА, брАло, брАли\nлгАть – лгАл, лгалА, лгАло, лгАли.\nвзялА, взялАсь, влилАсь, ворвалАсь, воспринялА, воссоздалА, гналА, гналАсь, добралА, добралАсь, ждалА, дождалАсь, занялА, заперлА, заперлАсь, звалА, звалАсь, лилА, лилАсь, навралА, надорвалАсь, назвалАсь, налилА, нарвалА, началА, облилАсь, обнялАсь, обогналА, ободралА, отбылА, отдалА, отозвалА, отозвалАсь, перелилА, позвалА, полилА, понялА, прибылА, рвалА, снялА, создалА, сорвалА, убралА.\n\n3. У глаголов класть, красть, красться, слать, послать, отослать ударение в форме женского рода прошедшего времени НЕ падает на окончание, а остаётся на основе:\nклАла, крАла, крАлась, слАла, послАла, отослАла.\nИсключение составляют глаголы с ударной приставкой ВЫ-, которая всегда перетягивает ударение:\nлилА – вЫлила, крАла – вЫкрала.\n\n4. В глаголах, оканчивающихся на -ИТЬ, при спряжении ударение падает на окончания: -ИШЬ, -ИТ, -ИМ, -ИТЕ, -АТ/-ЯТ:\nвключИть – включИшь, включИт, включИм, включИте, включАт\nвручИть – вручИшь, вручИт, вручИм, вручИте, вручАт\nдозвонИться – дозвонИшься, дозвонИтся, дозвонИмся, дозвонИтесь, дозвонЯтся\nкровоточИть – кровоточИшь, кровоточИт, кровоточИм, кровоточИте, кровоточАт.\n\nПо той же схеме спрягаются глаголы:\nзвонИть, исключИть, наделИть, накренИться, насорИть, обзвонИть, облегчИть, ободрИть, ободрИться, одолжИть, окружИть, повторИть, перезвонИть, позвонИть, сверлИть, укрепИть, щемИть.\n\n5. В следующих глаголах, оканчивающихся на –ИТЬ, ударение НЕ падает на окончание:\nопОшлить – опОшлят\nосвЕдомиться – освЕдомишься.\n\n6. В глаголах, образованных от имён прилагательных, ударение чаще всего падает на -ИТЬ:\nбыстрый – убыстрИть, острый – обострИть, лёгкий – облегчИть, бодрый – ободрИть, глубокий – углубИть.\nНО: глагол озлОбить, образованный от прилагательного злой, этому правилу не подчиняется.\n\n7. В возвратных глаголах ударение в форме прошедшего времени часто переходит на окончание или суффикс (в глаголах прошедшего времени мужского рода):\nначАться – началсЯ, началАсь, началОсь, началИсь\nпринЯться – принялсЯ, принялАсь, принялОсь, принялИсь.</string>
    <string name="aboutParticiple">1. В действительных причастиях прошедшего времени с суффиксом -ВШ- ударение, как правило, падает на ту же гласную, что стоит в слове перед этим суффиксом:\nзажИвший, налИвший, посмотрЕвший.\n\n2. В страдательных причастиях прошедшего времени, образованных от глаголов изогнуть, загнуть, согнуть ударение падает на приставку:\nизОгнутый, зАгнутый, сОгнутый.\n\n3. В кратких страдательных причастиях прошедшего времени женского рода ударение падает на окончание:\nзанятА, запертА, заселенА, нажитА, налитА, ободренА, снятА, созданА.\n\n4. Если ударение в полной форме падает на суффикс -ЁНН-, то в краткой форме оно сохраняется только в мужском роде, а в остальных формах переходит на окончание:\nвключЁнный – включЁн, включенА, включенО, включенЫ\nдовезЁнный – довезЁн, довезенА, довезенО, довезенЫ\nзаселЁнный – заселЁн, заселенА, заселенО, заселенЫ.\n\nПо той же схеме изменяются причастия:\nнаделЁнный, низведЁнный, ободрЁнный, отключЁнный, повторЁнный, поделЁнный, приручЁнный.\n\n5. В полных формах причастий с суффиксом -Т-, образованных от глаголов с суффиксами -О- и -НУ- в инфинитиве, ударение падает на один слог вперёд:\nполОть – пОлотый, колОть – кОлотый, согнУть – сОгнутый, завернУть – завЁрнутый.\n</string>
    <string name="aboutAdvParticiple">1. Деепричастия часто имеют ударение на том же слоге, что и в инфинитиве глагола, от которого они образованы:\nзадАть – задАв, залИть – залИв, занЯть – занЯв, начАть – начАв, поднЯть – поднЯв, предпринЯть – предпринЯв, создАть – создАв.\n\n2. В деепричастиях с суффиксом -ВШ-, -ВШИ- ударение падает на гласную букву, которая стоит в слове перед этими суффиксами:\nначАв, отдАв, поднЯв, прибЫв, начАвшись.</string>
    <string name="aboutAdverb">1. На приставку ДО- ударение падает в следующих наречиях:\nдОверху, дОнизу, дОсуха.\nНО: добелА, донЕльзя.\n\n2. На приставку ЗА- ударение падает в словах:\nзАгодя, зАтемно, зАсветло.\nНО: завИдовать – завИдно.\n</string>

    <string name="titleEndGameOverlay">Вы прошли все слова!</string>
    <string name="questionEndGameOverlay">Хотите начать сначала?</string>
    <string name="btnRestart">Начать</string>
    <string name="btnMenu">Меню</string>

    <string name="switchInfinityMode">Бесконечная тренировка</string>
    <string name="aboutInfinityMode1">В бесконечном режиме слова не закончатся, пока Вы сами не выйдите из тренажёра.</string>
    <string name="aboutInfinityMode2">Особенности режима:\n1. Не ведётся учёт количества правильных ответов.</string>

    <string name="start">Добро пожаловать!</string>


</resources>