<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TheoryActivity">

    <EditText
        android:id="@+id/search_panel"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10sp"
        android:background="@drawable/shape_searchpanel"
        android:ems="10"
        android:hint="@string/hintSearch"
        android:inputType="text"
        android:paddingLeft="51dp"
        android:paddingRight="12dp"
        android:textColorHint="@color/white"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/magnifier"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="256dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/magnifier" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text=""
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_panel" />

    <ImageButton
        android:id="@+id/btnBackTheory"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="-8dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/shape_btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnNoun"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/btnNoun"
                        android:textSize="10sp" />
                    <Button
                        android:id="@+id/btnAdjective"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/btnAdjective"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnVerb"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/btnVerb"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/btnParticiple"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/btnParticiple"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAdvParticiple"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/btnAdvParticiple"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/btnAdverb"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/btnAdverb"
                        android:textSize="10sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/titleNoun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/titleNoun"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/aboutNoun"
                    android:textColor="@color/grey" />


                <TextView
                    android:id="@+id/titleAdjective"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/titleAdjective"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="3dp"

                    android:text="@string/aboutAdjective"
                    android:textColor="@color/grey" />


                <TextView
                    android:id="@+id/titleVerb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/titleVerb"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/aboutVerb"
                    android:textColor="@color/grey" />


                <TextView
                    android:id="@+id/titleParticiple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/titleParticiple"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/aboutParticiple"
                    android:textColor="@color/grey" />


                <TextView
                    android:id="@+id/titleAdvParticiple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/titleAdvParticiple"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/aboutAdvParticiple"
                    android:textColor="@color/grey" />


                <TextView
                    android:id="@+id/titleAdverb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/titleAdverb"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/aboutAdverb"
                    android:textColor="@color/grey" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnUp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@null"
        android:backgroundTint="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/shape_btn_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>